Use Debputy to lint and reformat (replacing wrap-and-sort)
Debputy offers more extensive static analysis of debian/ contents than
any other tool. Use it to validate the Debian packaging contents. Also
use it to replace `wrap-and-sort` and the custom debian/patches checker
as Debputy handles all of those checks.

Also remove the ''#!/usr/bin/make -f' check in debian/rules as Lintian
checks for this already.

Rewrite the errors to just emit text, no exit codes, and not to re-run
the tool as it may be slow and unnecessary.

--- a/src/container/Containerfile
+++ b/src/container/Containerfile
@@ -21,9 +21,17 @@ RUN apt-get update -q && \
     pristine-tar
 
 # Validator dependencies
+# @TODO: dh-debputy and python3-pygls only available in latest Debian Sid 2024,
+# this needs some rethinking to be compatible with building containers of older
+# Debian and Ubuntu releases
 RUN apt-get install -q --yes --no-install-recommends \
+  dh-debputy \
   diffoscope-minimal \
+  hunspell-en-us \
   python3-debian \
+  python3-hunspell \
+  python3-levenshtein \
+  python3-lsprotocol \
   shellcheck \
   xxd
 
