--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,11 @@
 ---
-default:
-  image: debian:sid-slim
-
 stages:
   - test
-  - Salsa-CI
+  - package
 
 test:
   stage: test
+  image: debian:sid-slim
   script:
     - apt-get update -qq && apt-get -qq install --no-install-recommends --yes git devscripts python3-debian shellcheck make lsb-release codespell
     - make test-static
@@ -33,3 +31,9 @@ sast:
   stage: test
 include:
 - template: Security/SAST.gitlab-ci.yml
+
+# Once all native tests passed, also run Salsa-CI
+Salsa-CI:
+  stage: package
+  trigger:
+    include: debian/salsa-ci.yml
